# min-Onsets-Frames

./: .gitignore  README.md  experiment.ipynb  main.py  pyproject.toml  setup.py  train.py
src/: __init__.py  constant.py  dataset.py  decoding.py  mel.py  midi.py  model.py  modules.py
