[project]
name = "honmono"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.10.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "mido>=1.3.3",
    "mir-eval>=0.8.2",
    "numpy>=2.4.2",
    "pretty-midi>=0.2.11",
    "sacred>=0.8.7",
    "scipy>=1.17.1",
    "setuptools>=82.0.0",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
    "tqdm>=4.67.3",
]
